# visdrone-flow

./: .gitignore  README.md  pyproject.toml  run.py
docs/: algorithm_repositories.md  algorithm_spec.docx  algorithm_spec.md  algorithm_summary.md  architecture_org.mmd  data_standard.md  operational_models.md  urgent_models.md
src/visdrone_flow/: __init__.py  allocation.py  api.py  cli.py  electromagnetic.py  features.py  grid.py  io.py  model_store.py  perception.py  routing.py  safety.py  sample_data.py  schemas.py  service.py  state_io.py
src/visdrone_flow/models/: __init__.py  historical_average.py  online_spatial_temporal_sgd.py  spatial_temporal_ridge.py
tests/: test_operational_models.py  test_train_predict.py
